@@ -18,6 +18,8 @@ import qualified Command.ReKey
 import qualified Command.Fsck
 import qualified Annex
 import Logs.MetaData
+import Logs.Web
+import qualified Remote
 
 cmd :: Command
 cmd = notDirect $ withGlobalOptions annexedMatchingOptions $
@@ -77,6 +79,12 @@ perform file oldkey oldbackend newbackend = go =<< genkey
 	finish newkey = ifM (Command.ReKey.linkKey file oldkey newkey)
 		( do
 			copyMetaData oldkey newkey
+			-- If the old key had some associated urls, record them for
+			-- the new key as well.
+			urls <- getUrls oldkey
+			forM_ urls $ \url -> do
+				r <- Remote.claimingUrl url
+				setUrlPresent (Remote.uuid r) newkey url
 			next $ Command.ReKey.cleanup file oldkey newkey
 		, error "failed"
 		)
